# plu_activation

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  grid_plu_example.py  paper.md  paper.tex  pyproject.toml  references.bib  spiral_plu_example.py
plu_activation/: __init__.py  plu.py
